2005-05-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Validation.pm: Add support for conditional
	License options.


2005-05-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Call to get_mirror() should be get_license().

2005-05-06  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Added new get_license() accessor.

2005-05-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Add SkipPrompts ability.
	* Engine.pm: Create SkipPrompts category 'virtualdep'.
	* Mirror.pm, NetAccess.pm, PkgVersion.pm: Create SkipPrompts category
	'fetch'.

2005-05-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't bother fixing "=" for single-char 'fink list' flags

2005-05-05  Daniel Macks  <dmacks@netspace.org>

	* Base.pm: param_default: Don't sanitize $default unless it's
	actually needed.

2005-05-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Delay loading of all fields until we need them

2005-05-04  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix up gimp-print stuff for 10.4

2005-05-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Notify.pm, Notify/*.pm: Update notifications plugins
	to enumerate a short description and optional URL describing the
	plugin, as well as a command to list the available plugins and their
	versions.  We could use "fink plugin" in the future to list other
	plugins if there is such a thing later on...

2005-04-29  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Remove hardcoded /sw from .info search path.

2005-04-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: include gettext-tools among the additional pkgs

2005-04-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Mirror.pm: When master is first, and fails twice, assume it's a file
	that hasn't yet gotten sync'ed to the masters and just move to the next
	set.

2005-04-28  Dave Vasilevsky  <vasi@users.sourceforge.net>
